--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+
+* {
+  box-sizing: border-box;
+}
 body {
+  //background-color: #242333;
+  color: navy;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  font-family: "lato", sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#tweet-quote {
+  text-align: center;
+}
+.author {
+  text-align: center;
+}
+#display-box {
+  width: 500px;
+  height: 90vh;
+  position: relative;
+  margin: auto;
+  background-color: beige;
+  background-image: url("https://eclectic-horseman.com/wp-content/uploads/2013/06/ralphwilson.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  bottom: 0;
+  border: double;
+  border-color: white;
+  border-radius: 12px;
+}
+#text {
+  text-align: justify;
+  text-align: center;
+  padding: 12px;
+  font-size: 1.2rem;
+}
+#quote-bundle {
+  //background-color: #ffffff;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+}
+
+.button {
+  border: none;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 12px;
+  background-color: white;
+}
+
+a:link {
+  padding: 10px;
+  color: green;
+  //border-style: solid;
+  //border-color: white;
+  border-radius: 12px;
+  background-color: white;
+  text-decoration: none;
+}
+a:visited {
+  color: green;
+}
+a:hover {
+  color: red;
+}
+a:active {
+  color: yellow;
 }
